# StroyTestTask

./: .env.dist  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile  docker-entrypoint.sh  gunicorn_conf.py
products_app/: config.py  main.py  openapi.py
products_app/application/dto/: category.py  product.py
products_app/application/interactors/: category.py  product.py
products_app/application/interfaces/: category.py  common.py  product.py  unit_of_work.py
products_app/controllers/http/routers/: category.py  main.py  product.py
products_app/controllers/schemas/: category.py  product.py
products_app/domain/entitites/: category.py  product.py
products_app/domain/exceptions/: base.py  category.py  product.py
products_app/infra/database/: database.py
products_app/infra/database/migrations/: env.py
products_app/infra/database/migrations/versions/: 2024_08_24_1849-09f6fd6cab0f_init.py  2024_08_25_1643-4816d3b77731_add_attributes_to_product.py  2024_08_26_0520-f51205cdff6e_update_on_delete_in_product.py
products_app/infra/database/models/: __init__.py  category.py  product.py
products_app/infra/gateways/: category.py  product.py
products_app/ioc/: gateways.py  interactors.py  main.py
tests/: .env.test  conftest.py  docker-compose.yml  docker_services.py
tests/routes/test_categories/: conftest.py  test_categories.py
tests/routes/test_products/: conftest.py  test_products.py
